--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
     "@chakra-ui/react": "^2.2.4",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
-    "framer-motion": "^6.5.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "@reduxjs/toolkit": "^1.8.3",
     "firebase": "^9.9.1",
     "firebaseui": "^6.0.1",
     "formik": "^2.2.9",
+    "framer-motion": "^6.5.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
+    "react-redux": "^8.0.2",
     "react-router-dom": "6"
   },
   "devDependencies": {
